styles/main.css
@font-face {
  font-family: 'Inter', sans-serif;
  font-style: italic;
  font-weight: 100 900;
  font-display: block;
  src:url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
  font-named-instance: 'Italic';
}

body {
  font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont,
    'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
  -webkit-font-smoothing: subpixel-antialiased;
  font-feature-settings: 'case' 1, 'cpsp' 1, 'dlig' 1, 'cv01' 1, 'cv02',
    'cv03' 1, 'cv04' 1;
  font-variation-settings: 'wght' 450;
  letter-spacing: -0.02em;
  font-variant: common-ligatures contextual;
}
b,
strong,
h3,
h4,
h5,
h6 {
  font-variation-settings: 'wght' 650;
}
h1 {
  font-variation-settings: 'wght' 850;
}
h2 {
  font-variation-settings: 'wght' 750;
}

@media screen and (min-device-pixel-ratio: 1.5),
  screen and (min-resolution: 1.5dppx) {
  body {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
  }
}

details summary {
  cursor: pointer;
}

img.next-image {
  margin: 0;
}

.prose a {
  color: #0074de;
}

.nav-line .nav-link {
  color: #69778c;
}

.nav-line {
  margin-bottom: 2rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-end;
  text-align: right;
  background: #0c0c0c;
  color: #d3d3d3;
  padding: 10px 19px;
  border-radius: 5px;
  margin-left: -15px;
  width: calc(100% + 30px);
  border-bottom: 1px solid #6d6d6d4d;
}

.icon-link, .icon-link > i {
  font-size: 18px;
  margin-left: 5px;
  color: #7e7e7e;
}
.icon-link:hover, .icon-link > i:hover {
  color: #f3f4f6;
}

.resume-icon {
  color: #1d1d1d;
  font-size: 100px;
  position: absolute;
  z-index: -1;
  margin-top: -14px;
  margin-left: 550px;
}

.designation-with-img {
  display: flex;
}

img.resume-dp {
  margin: 0;
  margin-left: auto;
  margin-right: 10px;
  margin-top: -70px;
  width: 110px;
  border-radius: 50%;
  opacity: 0.5;
  filter: grayscale(100%);
}
img.resume-dp:hover {
  opacity: 1;
  filter: grayscale(0%);
}

.contact-icon {
  font-size: 15px;
  vertical-align: middle;
  margin-right: 6px;
  width: 15px;
  text-align: center;
}

.skills-banner {
  display: flex;
  margin: auto;
  justify-content: center;
  align-self: center;
  align-items: center;
}

.skills-banner-item {
  margin: 0 15px;
  text-align: center;
  color: #7e7e7e;
}

.skill-banner-icon {
  font-size: 64px;
}

.skill-banner-text {
  font-size: 12px;
}

@media screen and (max-width: 768px) {
  .skill-banner-icon {
    font-size: 34px;
  }

  .skills-banner-item {
    margin: 0 10px;
    text-align: center;
  }
  
  
  .skill-banner-text {
    font-size: 12px;
  }

  .resume-icon {
    margin-left: 0px;
    right: 15px;
    font-size: 100px;
  }

  img.resume-dp {
    margin-top: -50px;
  }

  img.resume-dp {
    margin-right: 0px;
  }
}

.skills-banner-item:hover {
  color: #f3f4f6;
}

